logs/pypeton.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycolors2-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/pypeton'...
Listing './lib/python3.5/site-packages/pypeton/files'...
Listing './lib/python3.5/site-packages/pypeton/files/django'...
Listing './lib/python3.5/site-packages/pypeton/files/django/deploy'...
Listing './lib/python3.5/site-packages/pypeton/files/django/deploy/requirements'...
Listing './lib/python3.5/site-packages/pypeton/files/django/env'...
Listing './lib/python3.5/site-packages/pypeton/files/django/logs'...
Listing './lib/python3.5/site-packages/pypeton/files/django/migrations'...
Listing './lib/python3.5/site-packages/pypeton/files/django/project'...
Listing './lib/python3.5/site-packages/pypeton/files/django/project/apps'...
Listing './lib/python3.5/site-packages/pypeton/files/django/project/apps/initial_data'...
Listing './lib/python3.5/site-packages/pypeton/files/django/project/apps/initial_data/fixtures'...
Listing './lib/python3.5/site-packages/pypeton/files/django/project/apps/initial_data/management'...
Listing './lib/python3.5/site-packages/pypeton/files/django/project/apps/initial_data/middleware'...
Compiling './lib/python3.5/site-packages/pypeton/files/django/project/apps/initial_data/models.py'...
***   File "./lib/python3.5/site-packages/pypeton/files/django/project/apps/initial_data/models.py", line 25
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pypeton/files/django/project/settings'...
Listing './lib/python3.5/site-packages/pypeton/files/django/project/static'...
Listing './lib/python3.5/site-packages/pypeton/files/django/project/templates'...
Compiling './lib/python3.5/site-packages/pypeton/files/django/project/urls.py'...
***   File "./lib/python3.5/site-packages/pypeton/files/django/project/urls.py", line 21
    urlpatterns.insert(-2, url(r'^%%s(?P<path>.*)' %% settings.MEDIA_URL[1:],
                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pypeton/files/django/uploads'...
Listing './lib/python3.5/site-packages/pypeton-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
